# textlint

./: .commit_msg.txt  LICENSE  README.md  package-lock.json  package.json  rename.cjs
.github/workflows/: release.yml
src/: index.html  panel.html  settings.html  toast.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_filter.rs  clipboard.rs  corrections.rs  floating_panel.rs  gemini.rs  lib.rs  main.rs  settings.rs  shortcuts.rs
src/scripts/: panel.js  settings.js  toast.js
src/styles/: panel.css  settings.css  shared.css  toast.css
